fixed monitor section alignment and hero image size

--- a/website/frontend/styles/Hero.scss
+++ b/website/frontend/styles/Hero.scss
@@ -324,7 +324,7 @@
       margin-bottom: 40px;
       >img {
         width: 100%;
-        height: 279px;
+        height: 100%;
         object-fit: cover;
       }
     }
@@ -354,9 +354,29 @@
     .hero-buttons {
       flex-direction: column;
       width: 100%;
-      max-width: 328px;
+      width: 100%;
       margin: 0;
     }
+  }
+
+  .button-hero, .button-get-involved {
+    width: 100%;
+    padding: 16px auto;
+    box-sizing: border-box;
+  }
+
+  .button-get-involved {
+    margin-top: 12px;
+  }
+}
+
+@media(max-width: 411px) {
+  .hero-buttons {
+    flex-direction: column;
+    width: 100%;
+    max-width: 328px;
+    width: 100%;
+    margin: 0;
   }
 
   .button-hero {
